# django-postgres

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
notebook/: settings.py  urls.py
notes/: models.py  views.py
notes/migrations/: 0001_initial.py
templates/: note-create.html  note-delete.html  note-detail.html  note-update.html
