[tool.poetry]
name = "python-pg"
version = "0.1.0"
description = ""
authors = ["Arthur <chillout885@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.3"
django-crispy-forms = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
